--- a/visualizer-ui/package.json
+++ b/visualizer-ui/package.json
@@ -10,11 +10,13 @@
     "assert": "^2.1.0",
     "black-scholes-js": "^0.0.7",
     "buffer": "^6.0.3",
+    "chart.js": "^4.5.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-app-rewired": "^2.2.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
