--- a/zoo/options_zero_game/visualizer-ui/package.json
+++ b/zoo/options_zero_game/visualizer-ui/package.json
@@ -22,6 +22,7 @@
     "socket.io-client": "^4.8.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "url": "^0.11.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
