--- a/zoo/options_zero_game/visualizer-ui/package.json
+++ b/zoo/options_zero_game/visualizer-ui/package.json
@@ -11,6 +11,7 @@
     "black-scholes-js": "^0.0.7",
     "buffer": "^6.0.3",
     "chart.js": "^4.5.0",
+    "chartjs-plugin-annotation": "^3.1.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
