fixed spread to failsafe default spread of 2 width

--- a/.gitignore
+++ b/.gitignore
@@ -1451,3 +1451,5 @@ lzero/mcts/ctree/ctree_alphazero/pybind11
 
 zoo/jericho/envs/z-machine-games-master
 options_zero_game_*
+evaluator/*
+experiments/*
