--- a/.gitignore
+++ b/.gitignore
@@ -1452,4 +1452,6 @@ lzero/mcts/ctree/ctree_alphazero/pybind11
 zoo/jericho/envs/z-machine-games-master
 options_zero_game_*
 evaluator*
+strategy_eval
+eval
 experiments/*
