--- a/zoo/options_zero_game/visualizer-ui/package.json
+++ b/zoo/options_zero_game/visualizer-ui/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
     "assert": "^2.1.0",
+    "black-scholes": "^1.1.0",
     "black-scholes-js": "^0.0.7",
     "buffer": "^6.0.3",
     "chart.js": "^4.5.0",
