fixed the traders score

--- a/.gitignore
+++ b/.gitignore
@@ -1452,7 +1452,7 @@ lzero/mcts/ctree/ctree_alphazero/pybind11
 zoo/jericho/envs/z-machine-games-master
 options_zero_game_*
 evaluator*
-strategy_eval
+strat_eval
 eval
 experiments/*
 *reports*
